# s3pool

./: .env.example  CLAUDE.md  Cargo.toml  README.md  config.example.yaml  test_proxy.sh  tests.sh  verify_fixes.sh
examples/: basic_usage.rs  pool_usage.rs
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  handler.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/lb/: backend.rs  balancer.rs  example.rs  health.rs  mod.rs
src/pool/: circuit.rs  connection.rs  mod.rs
src/proxy/: mod.rs  server.rs
src/s3/: client.rs  mod.rs  signer.rs  types.rs
tests/: config_test.rs  pool_integration.rs
