[package]
name = "s3pool"
version = "0.2.0"
edition = "2021"
authors = ["s3pool contributors"]
description = "Ultra-fast S3 client with built-in load balancing - CLI and proxy modes"
license = "MIT"

[[bin]]
name = "s3pool"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP client
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TLS support (native-tls uses OpenSSL)
tokio-native-tls = "0.3"
native-tls = "0.2"
hyper-tls = "0.6"

# AWS SigV4
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
base64 = "0.22"

# URL parsing
url = "2"
urlencoding = "2"

# CLI
clap = { version = "4", features = ["derive", "env", "cargo"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dotenvy = "0.15"

# Progress bars
indicatif = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus-client = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
bytes = "1"
futures = "0.3"
once_cell = "1"
rand = "0.8"
socket2 = "0.5"

# XML parsing for S3 responses
quick-xml = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
